# SpellVision

./: .env  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Manager_Cache_Helper_Forward_Decl_Fix_README.md  Manager_Cache_Symbol_Fix_README.md  README.md  README_APPLY_WAN_FIX.md  README_T2V_ADVANCED_WORKFLOWS.md  SPRINT14A_INTEGRATION_PASS1_README.md  SPRINT14A_INTEGRATION_PASS2_README.md  SPRINT14A_PREVIEW_REFACTOR_README.md  SPRINT14B_CATALOG_PICKER_PASS9_README.md  SPRINT14B_LORA_STACK_CONTROLLER_PASS7_README.md  SPRINT14B_MODEL_STACK_STATE_PASS6_README.md  SPRINT14B_MODE_STATE_PASS2_README.md  SPRINT14B_OUTPUT_PATH_HELPERS_PASS12_README.md  SPRINT14B_REQUEST_BUILDER_PASS1_README.md  SPRINT14B_RESULT_ROUTER_PASS3_README.md  SPRINT14B_SECTION_WIDGETS_PASS11_README.md  SPRINT14B_WIDGET_HELPERS_PASS10_README.md  SPRINT14B_WORKER_PARSER_WIRING_PASS5_README.md  SPRINT14B_WORKER_RESPONSE_PARSER_PASS4_README.md  SPRINT14C_ASSET_CATALOG_SCANNER_PASS13_README.md  SPRINT14C_BOTTOM_TELEMETRY_PRESENTER_PASS10_README.md  SPRINT14C_MAINWINDOW_TRAY_CONTROLLER_PASS8_README.md  SPRINT14C_QUEUE_UI_PRESENTER_PASS9_README.md  SPRINT14C_SHELL_NAVIGATION_CONTROLLER_PASS12_README.md  SPRINT14C_SHELL_NAVIGATION_PASS12_FOR_LOOP_FIX_README.md  SPRINT14C_STATUS_CONTROLLER_PASS1_README.md  SPRINT14C_WORKER_COMMAND_RUNNER_PASS2_README.md  SPRINT14C_WORKER_PROCESS_CONTROLLER_PASS3_README.md  SPRINT14C_WORKER_PROCESS_WIRING_PASS4_README.md  SPRINT14C_WORKER_QUEUE_CONTROLLER_PASS5_README.md  SPRINT14C_WORKER_QUEUE_WIRING_PASS6_README.md  SPRINT14C_WORKER_SUBMISSION_POLICY_PASS7_LEFTOVER_FIX_README.md  SPRINT14C_WORKER_SUBMISSION_POLICY_PASS7_README.md  SPRINT14C_WORKFLOW_LAUNCH_CONTROLLER_PASS11_README.md  SPRINT15A_VIDEO_BACKEND_DIAGNOSTICS_PASS3_README.md  (+31 more)
_sv_patch/native_wan_core_route_pass/: README.md
build-vscode/: .ninja_deps  .ninja_log  build.ninja
cmake/: SpellVisionQtDeploy.cmake
docs/: DEV_WORKFLOW.md  JOB_LIFECYCLE_CONTRACT.md  NEXT_SPRINT_WORKFLOW_LIBRARY_RUNTIME.md  PINNED_VENV_COMFY_README.md  SPELLVISION_AI_PIPELINES.md  SPELLVISION_ARCHITECTURE.md  SPELLVISION_DEV_GUIDE.md  SPELLVISION_FEATURE_MATRIX.md  SPELLVISION_INSTALLATION_GUIDE.md  SPELLVISION_MODEL_MANAGER_SPEC.md  SPELLVISION_ROADMAP.md  SPELLVISION_UI_SHELL_README.md  SPELLVISION_WORKER_PROTOCOL.md  SPRINT10_MODEL_SOURCES_README.md  SPRINT10_WAN_LTX_README.md  SPRINT10_WORKFLOW_DEPENDENCY_LAYER.md  SPRINT10_WORKFLOW_IMPORTER_ARCHITECTURE.md  SPRINT14A_CMAKE_SNIPPET.txt  SPRINT14A_PASS2_CMAKE_SNIPPET.txt  SPRINT14B_CMAKE_SNIPPET.txt  SPRINT14B_PASS10_CMAKE_SNIPPET.txt  SPRINT14B_PASS11_CMAKE_SNIPPET.txt  SPRINT14B_PASS12_CMAKE_SNIPPET.txt  SPRINT14B_PASS2_CMAKE_SNIPPET.txt  SPRINT14B_PASS3_CMAKE_SNIPPET.txt  SPRINT14B_PASS4_CMAKE_SNIPPET.txt  SPRINT14B_PASS5_NOTES.md  SPRINT14B_PASS6_CMAKE_SNIPPET.txt  SPRINT14B_PASS7_CMAKE_SNIPPET.txt  SPRINT14B_PASS9_CMAKE_SNIPPET.txt  SPRINT14C_PASS10_CMAKE_SNIPPET.txt  SPRINT14C_PASS10_NOTES.md  SPRINT14C_PASS11_CMAKE_SNIPPET.txt  SPRINT14C_PASS11_NOTES.md  SPRINT14C_PASS12_CMAKE_SNIPPET.txt  SPRINT14C_PASS12_FOR_LOOP_FIX_NOTES.md  SPRINT14C_PASS12_NOTES.md  SPRINT14C_PASS13_CMAKE_SNIPPET.txt  SPRINT14C_PASS13_NOTES.md  SPRINT14C_PASS1_CMAKE_SNIPPET.txt  (+27 more)
docs/design/: SpellVision_Rust_Python_Qt_Ownership_Map.md  SpellVision_UI_Design_System.md  SpellVision_UI_File_Mapping.md  SpellVision_UI_Implementation_Checklist.md
docs/product/: SpellVision_Full_Roadmap_0.1_to_2.0.md  SpellVision_Sprint_Plan.md  SpellVision_UI_QA_Checklist.md
docs/sprints/: SPRINT15A_I2V_INPUT_KEYFRAME_HANDOFF_PASS4_README.md  (+24 more)
python/: comfy_bootstrap.py  comfy_manager_bridge.py  comfy_runtime_manager.py  comfy_slot_mapper.py  gpu_info.py  ltx_prompt_api_adapter.py  ltx_prompt_api_submission.py  ltx_queue_history_registry.py  ltx_requeue_draft_submission.py  ltx_smoke_test_route.py  ltx_ui_queue_history_contract.py  ltx_workflow_contract.py  ltx_workflow_graph_inspection.py  ltx_workflow_materialization.py  model_dependency_resolver.py  model_registry.py  model_sources.py  node_dependency_resolver.py  runtime_paths.py  starter_node_catalog.json  t2i_worker.py  video_family_contracts.py  video_family_readiness.py  worker_client.py  worker_service.py  workflow_importer.py  workflow_profile_registry.py  workflow_scanner.py
qt_ui/: CommandPaletteDialog.cpp  CommandPaletteDialog.h  CustomTitleBar.cpp  CustomTitleBar.h  DashboardGlassPanel.cpp  DashboardGlassPanel.h  DashboardMetricChip.cpp  DashboardMetricChip.h  DashboardPreviewPlate.cpp  DashboardPreviewPlate.h  DashboardSurfaceTokens.cpp  DashboardSurfaceTokens.h  DatasetGenerationPage.cpp  HomeDashboardModuleRegistry.cpp  HomeDashboardModuleRegistry.h  HomeDashboardPage.cpp  HomeDashboardPage.h  HomeDashboardSettings.cpp  HomeDashboardSettings.h  HomeDashboardTypes.h  HomeModuleBase.cpp  HomeModuleBase.h  HomeModuleFrame.cpp  HomeModuleFrame.h  HomePage.cpp  HomePage.h  ImageGenerationPage.cpp  ImageGenerationPage.h  MainWindow.cpp  MainWindow.h  ManagerPage.cpp  ManagerPage.h  ModePage.cpp  ModePage.h  ModelManagerPage.cpp  ModelManagerPage.h  QueueFilterProxyModel.cpp  QueueFilterProxyModel.h  QueueManager.cpp  QueueManager.h  (+15 more)
rust/: Cargo.toml
vscode/: settings.json
(+248 files in other folders)
